# appendable_proto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  appendable.db-shm  appendable.db-wal  compose.yml  nginx.conf  readme.md
front_end/: README.md  angular.json  package-lock.json  package.json
front_end/src/: index.html  styles.scss
front_end/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
front_end/src/app/model/: block.interface.ts  block.mapper.ts  block.model.ts  color.model.ts  contenteditable.model.ts  entry.interface.ts  entry.mapper.ts  entry.model.ts  helper.mapper.ts  project.interface.ts  project.mapper.ts  project.model.ts
front_end/src/app/outliner/: outliner.component.ts
front_end/src/app/page-not-found/: page-not-found.component.ts
front_end/src/app/pipes/: display-date.pipe.ts  display-duration.pipe.spec.ts  display-duration.pipe.ts  display-time.pipe.ts  round-date.pipe.ts  url-datetime.pipe.spec.ts  url-datetime.pipe.ts
front_end/src/app/projects/: projects.component.ts
front_end/src/app/services/: entry.service.ts
front_end/src/model/: entry.interface.ts  entry.mapper.ts  entry.model.ts
front_end/src/model/pipes/: display-date.pipe.ts
migrations/: 1_initialize_tables.sql
sql_helper/: init_test_data.sql
src/: auth.rs  blocks.rs  colors.rs  database.rs  entries.rs  errors.rs  lib.rs  main.rs  models.rs  projects.rs
src/sql/: create_db.sql  delete_entry_safe.sql  delete_entry_with_children.sql  init_test_data.sql  insert_entry.sql
(+78 files in other folders)
