[package]
name = "appendable_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-macros = "0.5"
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }

tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "time",
    "chrono",
] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rand = "0.9"
jsonwebtoken = "9"
cookie = "0.18"

dotenvy = "0.15"

[profile.dev.package.sqlx-macros]
opt-level = 3
